infra/openshift/user-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mylineup-user-app
  labels:
    app: mylineup-user-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mylineup-user-app
  template:
    metadata:
      labels:
        app: mylineup-user-app
    spec:
      containers:
        - name: mylineup-user-app
          image: ghcr.io/sebastiancie/mylineup-user-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mylineup-user-app
  labels:
    app: mylineup-user-app
spec:
  selector:
    app: mylineup-user-app
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mylineup-user-app
  labels:
    app: mylineup-user-app
spec:
  to:
    kind: Service
    name: mylineup-user-app
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
